--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     
 </div>
 
-<button class="btn btn-primary btn-lg">Trabajo Grupal 1</button>
+<a href="https://drive.google.com/file/d/158fY_YvA9j8YoL5cor5NeEWhl7BFQz_9/view?usp=sharing" ><button class="btn btn-primary btn-lg">Trabajo Grupal 1</button></a>
 <br>
 <button class="btn btn-primary btn-lg">Trabajo Grupal 2</button>
 
@@ -58,40 +58,40 @@
     <h4>MODULO 1:</h4>
 		<select name="modulo1" id="modulo1" class="form-control">
         <option >-- Opciones -- </option>
-		<option value = "https://www.youtube.com/watch?v=21VZl7Gs1F0&ab_channel=MoratMoratCanaloficialdeartista" >Tarea individual 1 (PDF)</option>
-        <option value = "https://www.youtube.com/watch?v=21VZl7Gs1F0&ab_channel=MoratMoratCanaloficialdeartista" >Tarea individual 2 (PDF)</option>
-        <option value = "https://www.youtube.com/watch?v=21VZl7Gs1F0&ab_channel=MoratMoratCanaloficialdeartista" >Tarea individual 3 (PDF)</option>
-        <option value = "https://www.youtube.com/watch?v=21VZl7Gs1F0&ab_channel=MoratMoratCanaloficialdeartista" >Tarea individual 4 (PDF)</option>
+		<option value = "https://drive.google.com/file/d/1MWfY3Ez72HQ_KaHk8DcLxe2Is31ActZL/view?usp=sharing" >Tarea individual 1 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1H99OAFKMYxABW9udgD9p9IcjBQGBz6d2/view?usp=sharing" >Tarea individual 2 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1ymyOwWWO94KqA2V01vAw7OOWD5q0JRnQ/view?usp=sharing" >Tarea individual 3 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/10OyzVtixcxsdmrbLozZlC8jFdO06tG6g/view?usp=sharing" >Tarea individual 4 (PDF)</option>
         </select>
 <hr size="35px" width="100%" align="center" color="#394665"/>
 <div class="grupo-select">
     <h4>MODULO 2:</h4>
-		<select name="mes" id="selectMes" class="form-control">
-        <option disabled >Opciones: </option>
-		<option >Tarea individual 5 (PDF)</option></a>
-        <option >Tarea individual 6 (PDF)</option>
-        <option >Tarea individual 7 (PDF)</option>
-        <option >Tarea individual 8 (PDF)</option>
+		<select name="modulo2" id="modulo2" class="form-control">
+        <option >-- Opciones -- </option>
+		<option value = "https://drive.google.com/file/d/1-21TKnOXemROYeUeRLwtNn34umaxukl7/view?usp=sharing" >Tarea individual 5 (PDF)</option></a>
+        <option value = "https://drive.google.com/file/d/1huXkZc_y9QwcNjU-G3hJl_RL5LCQ6CKQ/view?usp=sharing" >Tarea individual 6 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/10PXCuMxlLEdZktvFWI7Pb5GsqfeZI1EE/view?usp=sharing" >Tarea individual 7 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/10PXCuMxlLEdZktvFWI7Pb5GsqfeZI1EE/view?usp=sharing" >Tarea individual 8 (PDF)</option>
         </select>
         <hr size="35px" width="100%" align="center" color="#394665"/>
 <div class="grupo-select">
     <h4>MODULO 3:</h4>
-		<select name="mes" id="selectMes" class="form-control">
-        <option disabled >Opciones: </option>
-		<option >Tarea individual 9 (PDF)</option>
-        <option >Tarea individual 10 (PDF)</option>
-        <option >Tarea individual 11 (PDF)</option>
-        <option >Tarea individual 12 (PDF)</option>
+		<select name="modulo3" id="modulo3" class="form-control">
+        <option >-- Opciones -- </option>
+		<option value = "https://drive.google.com/file/d/1OjNyYnF0BClaanB85V83pHF5OREiDKg-/view?usp=sharing">Tarea individual 9 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1ND-sPmfJC2e7bSyyA1eFn4v70fqt0XwY/view?usp=sharing">Tarea individual 10 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1ND-sPmfJC2e7bSyyA1eFn4v70fqt0XwY/view?usp=sharing">Tarea individual 11 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1OBjW7CjN0KVgCXoJJ9L6yjLd2R7uPVQc/view?usp=sharing">Tarea individual 12 (PDF)</option>
         </select>
         <hr size="35px" width="100%" align="center" color="#394665"/>
 <div class="grupo-select">
     <h4>MODULO 4:</h4>
-		<select name="mes" id="selectMes" class="form-control">
-        <option disabled >Opciones: </option>
-		<option >Tarea individual 13 (PDF)</option>
-        <option >Tarea individual 14 (PDF)</option>
-        <option >Tarea individual 15 (PDF)</option>
-        <option >Video de mi Cuaderno de Clases(MP4)</option>
+		<select name="modulo4" id="modulo4" class="form-control">
+        <option >-- Opciones -- </option>
+		<option value = "https://drive.google.com/file/d/1y9YfWd2jOXcMvqcP36RHJjhNgXi9XXTX/view?usp=sharing">Tarea individual 13 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1r6tamhaekKfK_9jFrdV8QYMKIKR4OyR0/view?usp=sharing">Tarea individual 14 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/158fY_YvA9j8YoL5cor5NeEWhl7BFQz_9/view?usp=sharing">Tarea individual 15 (PDF)</option>
+        <option value = "https://drive.google.com/file/d/1-21TKnOXemROYeUeRLwtNn34umaxukl7/view?usp=sharing">Video de mi Cuaderno de Clases(MP4)</option>
         </select>
         <hr size="35px" width="100%" align="center" color="#394665"/>
   </div>  
@@ -106,7 +106,46 @@
           }
           return false;
       });
-    });
+    }); 
+</script>
+
+<script>
+    $(function(){
+      // bind change event to select
+      $('#modulo2').on('change', function () {
+          var url2 = $(this).val(); // get selected value
+          if (url2) { // require a URL
+              window.location = url2; // redirect
+          }
+          return false;
+      });
+    }); 
+</script>
+
+<script>
+    $(function(){
+      // bind change event to select
+      $('#modulo3').on('change', function () {
+          var url3 = $(this).val(); // get selected value
+          if (url3) { // require a URL
+              window.location = url3; // redirect
+          }
+          return false;
+      });
+    }); 
+</script>
+
+<script>
+    $(function(){
+      // bind change event to select
+      $('#modulo4').on('change', function () {
+          var url4 = $(this).val(); // get selected value
+          if (url4) { // require a URL
+              window.location = url4; // redirect
+          }
+          return false;
+      });
+    }); 
 </script>
 </body>
 </div>
