--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
 <div class="containerr">
-    <img src="~/img/y.jpg">
+    <img src="~/img/melany.jpeg" width="450" height="660">
     
 </div>
 
