--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
 <a href="https://drive.google.com/file/d/158fY_YvA9j8YoL5cor5NeEWhl7BFQz_9/view?usp=sharing" ><button class="btn btn-primary btn-lg">Trabajo Grupal 1</button></a>
 <br>
-<button class="btn btn-primary btn-lg">Trabajo Grupal 2</button>
+<a href="https://docs.google.com/document/d/1bT3N3Jg_7uRXyvX7ppatKrs5RzuTi0HWKxlQI58Qark/edit?usp=sharing" ><button class="btn btn-primary btn-lg">Trabajo Grupal 2</button></a>
 
     <div class="containeer">
     <h2 class="display-6">UNIVERSIDAD SAN MARTIN DE PORRES</h2>
